# cv2cg

./: .gitmodules  .hgignore  CMakeLists.txt  ChangeLog  LICENSE.txt  README  changelog.txt  config.h.cmake  cv2cg.sln
CLapack2005Test/: CLapack2005Test.cpp  CLapack2005Test.vcproj  ReadMe.txt  solutionmatrix.matrix  stdafx.cpp  test.matrix
CLapack2005Test/Debug/: BuildLog.htm
CLapack2005Test/Release/: BuildLog.htm
CameraAlgebra/: CameraAlgebra.h  CameraAlgebra.vcproj  CameraAlgebraInline.h  ReadMe.txt  decompose.cpp  dlt.cpp  reprojecterr.cpp
CameraAlgebra/Debug/: BuildLog.htm
CameraAlgebra/Release/: BuildLog.htm
CameraCalibrator/: CameraCalibrator.vcproj  main.cpp
CameraCalibrator/Release/: BuildLog.htm
CameraSimulator/: CV_CG.h  CameraSimulator.cpp  CameraSimulator.h  CameraSimulator.rc  CameraSimulator.vcproj  CameraSimulator.vcproj.vspscc  MatrixManip_deprecated.h  Reader.h  SimulatorAPI.h  main.cpp  mssccprj.scc  resource.h  vssver2.scc
CameraSimulator/Debug/: BuildLog.htm
CameraSimulator/Release/: BuildLog.htm
CameraSwitcher/: CameraSwitcher.cpp  CameraSwitcher.h  CameraSwitcher.rc  CameraSwitcher.vcproj  CameraSwitcher.vcproj.vspscc  CameraUpdator.cpp  CameraUpdator.h  SwitchHandler.cpp  SwitcherAPI.cpp  SwitcherAPI.h  main.cpp  mssccprj.scc  resource.h  vssver2.scc
CameraSwitcher/Debug/: BuildLog.htm
CameraSwitcher/Release/: BuildLog.htm
DLTCalibrator/: DLTCalibrator.vcproj  main.cpp
MatrixManip/: MatrixInline.h  MatrixManip.cpp  MatrixManip.h  MatrixManip.vcproj  MatrixManipLog.h  ReadMe.txt
MatrixManip/Debug/: BuildLog.htm
MatrixManip/Release/: BuildLog.htm
Release/: CameraAlgebra.lib
SparseRec2View/: SparseRec2View.cpp  SparseRec2View.h  SparseRec2View.vcproj  main.cpp
SparseRecMultiView/: MultiViewSparseRec.cpp  MultiViewSparseRec.h  SparseRecMultiView.vcproj  main.cpp
application/: CMakeLists.txt  ReadMe.txt  cv2cg.bat  cv2cg.sh
application/AprilCalib/: AprilCalib.cfg  AprilCalib.cpp  CMakeLists.txt
application/AprilTagCreator/: AprilTagCreator.cpp  CMakeLists.txt
application/AprilTagFinder/: AprilTagFinder.cfg  AprilTagFinder.cpp  CMakeLists.txt
application/AprilTagFinderLCM/: AprilTagFinderLCM.cfg  AprilTagFinderLCM.cpp  CMakeLists.txt  apriltag_lcm.lcm  apriltag_listner.m  image_lcm.lcm  image_listener.m
application/CameraSimulator/: CMakeLists.txt  CameraSimulator.cpp  Reader.h  SimulatorAPI.h  main.cpp
application/CameraSwitcher/: CMakeLists.txt  CameraSwitcher.cpp  CameraSwitcher.h  CameraUpdator.cpp  SwitchHandler.cpp  SwitchHandler.h  main.cpp
application/DLTCalibrator/: CMakeLists.txt  main.cpp
application/FERN/: CMakeLists.txt  main.cpp
application/KEG/: CMakeLists.txt  KEG.cfg  KEG.cpp  main.cpp  runKEG.bat  runKEG.sh
application/SimpleAR/: CMakeLists.txt  KEGTracker.hpp  SimpleAR.cpp  Tracker.hpp  esm.cpp  esm.hpp  lie_algebra.hpp  main.cpp
application/SparseRec2View/: CMakeLists.txt  SparseRec2View.cpp  SparseRec2View.h  main.cpp
application/SparseRecMultiView/: CMakeLists.txt  MultiViewSparseRec.cpp  MultiViewSparseRec.h  main.cpp
cmake/: AutoAddSubDir.cmake  AutoAppConfig.cmake  BuildLCMType.cmake  FindFlyCapture.cmake  FindLCM.cmake  SetCV2CGDependencies.cmake
codeblocks/: cv2cg.workspace
codeblocks/CameraSimulator/: CameraSimulator.cbp  CameraSimulator.layout
codeblocks/CameraSwitcher/: CameraSwitcher.cbp  CameraSwitcher.layout
codeblocks/DLTCalibrator/: DLTCalibrator.cbp  DLTCalibrator.layout
codeblocks/SparseRec2View/: SparseRec2View.cbp  SparseRec2View.layout
codeblocks/SparseRecMultiView/: SparseRecMultiView.cbp  SparseRecMultiView.layout  mvsr.in
data/: Thumbs.db  draw.txt  draw.txt.out.swt  draw.txt.out0.cp  draw.txt.out0.par  draw.txt.out1.cp  draw.txt.out1.par  draw.txt.out_model.osg  scene.osg
data/KEG/: list.txt  logitech_quickcam_pro4000.K
data/camerasimulator/: cam.txt  draw.txt.out0.par
docs/: SimpleAR.SceneGraph.odg
include/: AllHelpers.h  AllOpenCVHeaders.h  AllOpenCVHelpers.h  AllStdHelpers.h  CV2CG.h  CV_CG.h  CameraHelper.h  CaptureSceneHelper.h  ClusterHelper.h  ConfigHelper.hpp  CreateSceneHelper.h  CvMatHelper.h  DetectorHelper.h  DirHelper.h  DirHelper.hpp  ESMHelper.h  FilterHelper.h  FlyCapHelper.hpp  IOHelper.h  IOHelper.hpp  ImageHelper.h  Log.h  Log.hxx  Log.inc  LogHelper.h  LogHelper.hpp  MatrixManip_deprecated.h  OSGHelper.h  OpenCV2OSG.h  OpenCVHeaders.h  OpenCVHelper.h  PerformanceHelper.h  RotationHelper.h  SearchHelper.h  Singleton.hpp  StringHelper.h  StringHelper.hpp  SwitchCameraHelper.h  Test.cpp  Tracker.hpp  (+15 more)
include/apriltag/: Notes  Tag16h5.hpp  Tag25h7.hpp  Tag25h9.hpp  Tag36h11.hpp  Tag36h9.hpp  TagDetection.hpp  TagDetector.hpp  TagFamily.hpp  TagFamilyFactory.hpp  TagGridder.hpp  TagTypes.hpp  TagUtils.hpp  apriltag.hpp
include/esm/: ESMHelper.hpp  ESMInterface.h  ESMlibry.h  ESMlibry.lib  esm.hpp  lie_algebra.hpp
include/keg/: FastTracker.hpp  KEGTracker.hpp  KLTTracker.hpp  KeyFrame.hpp  Recognizer.hpp  TemplateData.hpp
include/tests/: README  recompile  recompile.sh  testesm.cpp  testfast.cpp
matlab/: RTfromKH.m  compile.m  cvfast.m  cvfundmat.cpp  cvfundmat.m  cvgftt.m  cvharris.m  cvreadpar.m  cvsurf.cpp  cvsurf.m  cvsurf.mexa64  cvtriangulate.m  decomposeH.m  normalizeH.m  skew.m  test.m  warpH.m
