
ADD_SUBDIRECTORY(DLTCalibrator)
ADD_SUBDIRECTORY(SparseRec2View)
ADD_SUBDIRECTORY(SparseRecMultiView)
ADD_SUBDIRECTORY(CameraSimulator)
ADD_SUBDIRECTORY(SimpleAR)
ADD_SUBDIRECTORY(AprilTagFinder)
ADD_SUBDIRECTORY(AprilTagCreator)
ADD_SUBDIRECTORY(KEG)
ADD_SUBDIRECTORY(FERN) #for experiment, compare with KEG
