
INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/include
	${CMAKE_CURRENT_BINARY_DIR}
)

IF(DEFINED FLYCAPTURE_ROOT)
	INCLUDE_DIRECTORIES(
		${FLYCAPTURE_INCLUDE_PATH}
	)
ENDIF()

# To use all *.cpp, *.hpp files
FILE(GLOB ALL_HEADER_FILES
	*.hpp
	*.h
	*.hxx
)
FILE(GLOB CPP_FILES
	*.cpp
)

SET(APP_NAME AprilTagFinder)

SET(lib_SRCS
	${CPP_FILES}
	${ALL_HEADER_FILES}
)

IF(DEFINED FLYCAPTURE_ROOT)
	SET(extLinkerOption 
		${OpenCV_LIBS}
		${FLYCAPTURE_LIBRARY}
	)
ELSE()
	SET(extLinkerOption 
		${OpenCV_LIBS}
	)
ENDIF()

ADD_EXECUTABLE(${APP_NAME} ${lib_SRCS})
TARGET_LINK_LIBRARIES(${APP_NAME} ${extLinkerOption})

INSTALL(TARGETS ${APP_NAME} DESTINATION bin)
