
INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/include
	${CMAKE_CURRENT_BINARY_DIR}
)

# To use all *.cpp, *.hpp files
FILE(GLOB ALL_HEADER_FILES
	*.hpp
	*.h
	*.hxx
)
FILE(GLOB CPP_FILES
	*.cpp
)

SET(APP_NAME AprilTagFinder)

SET(lib_SRCS
	${CPP_FILES}
	${ALL_HEADER_FILES}
)

ADD_EXECUTABLE(${APP_NAME} ${lib_SRCS})
TARGET_LINK_LIBRARIES(${APP_NAME} ${CV2CG_3RDPARTY_LINKEROPTION})

INSTALL(TARGETS ${APP_NAME} DESTINATION bin)